--- a/ChartJs.Blazor.Samples/Server/Pages/_Host.cshtml
+++ b/ChartJs.Blazor.Samples/Server/Pages/_Host.cshtml
@@ -7,11 +7,12 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>ChartJs.Blazor Samples</title>
-    <base href="/" />
-    <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/app.css" rel="stylesheet" />
+    <link rel="icon" href="favicon.ico">
+    <base href="/" />
+    <title>ChartJs.Blazor Samples</title>
 </head>
 
 <body>
