--- a/ChartJs.Blazor.Samples/Client/Pages/Index.razor
+++ b/ChartJs.Blazor.Samples/Client/Pages/Index.razor
@@ -1,7 +1,17 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<div class="content">
+    <div class="header">
+        <div class="chartjs-title">Samples</div>
+        <div class="chartjs-caption">Brings <a target="_blank" href="https://www.chartjs.org/">Chart.js</a> to Blazor</div>
+        <div class="chartjs-links">
+            <a class="btn btn-gh" href="https://github.com/mariusmuntean/ChartJs.Blazor">GitHub</a>
+        </div>
+    </div>
 
-Welcome to your new app.
+    <div @ref="_categoriesRef" id="categories" class="samples-categories"></div>
+</div>
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+@code {
+    private ElementReference _categoriesRef;
+}
