Modify the welcome page in samples with chart´s buttons

--- a/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Pages/WelcomePage.razor
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/Pages/WelcomePage.razor
@@ -1,3 +1,62 @@
 ﻿@page "/welcome"
 
-<Welcome />
+    <style>
+        .bg-1 {
+            color: #4465A1; /* Green */
+            /*color: #ffffff;*/
+        }
+    </style>
+
+    <div class="container-fluid bg-1 text-center">
+        <h1>
+            Welcome to the ChartJs.Blazor Samples.
+        </h1>
+    </div>
+    <div class="row align-items-center">
+        <div class="col-12">
+            <h2 class="text-center">Charts</h2>
+        </div>
+        <div class="col-12 col-sm-6  col-xl-3 justify-content-center">
+            <a class="btn btn-block btn-primary " href="SimpleBarChart"><span class="oi oi-bar-chart" aria-hidden="true"></span> Simple BarChart</a>
+        </div>
+        <div class="col-12 col-sm-6  col-xl-3 mt-2">
+            <a class="btn btn-block btn-primary" href="HorizontalBarChart"><span class="oi oi-bar-chart" aria-hidden="true"></span> Horizontal BarChart</a>
+        </div>
+        <div class="col-12 col-sm-6  col-xl-3 mt-2">
+            <a class="btn btn-block btn-primary" href="StackedBarChart"><span class="oi oi-bar-chart" aria-hidden="true"></span> Stacked BarChart</a>
+        </div>
+        <div class="col-12 col-sm-6  col-xl-3 mt-2">
+            <a class="btn btn-block btn-primary" href="TimeBarChart"><span class="oi oi-bar-chart" aria-hidden="true"></span> Time BarChart</a>
+        </div>
+        <div class="col-12 col-sm-6  col-xl-3 mt-2">
+            <a class="btn btn-block btn-primary" href="LinearLineChart"><span class="oi oi-graph" aria-hidden="true"></span> Linear LineChart</a>
+        </div>
+        <div class="col-12 col-sm-6  col-xl-3 mt-2">
+            <a class="btn btn-block btn-primary" href="LogarithmicLineChart"><span class="oi oi-bar-chart" aria-hidden="true"></span> Logarithmic LineChart</a>
+        </div>
+        <div class="col-12 col-sm-6  col-xl-3 mt-2">
+            <a class="btn btn-block btn-primary" href="TimeLineChart"><span class="oi oi-graph" aria-hidden="true"></span> Time LineChart</a>
+        </div>
+        <div class="col-12 col-sm-6  col-xl-3 mt-2">
+            <a class="btn btn-block btn-primary" href="DoughnutChart"><span class="oi oi-graph" aria-hidden="true"></span> DoughnutChart</a>
+        </div>
+        <div class="col-12 col-sm-6  col-xl-3 mt-2">
+            <a class="btn btn-block btn-primary" href="PieChart"><span class="oi oi-pie-chart" aria-hidden="true"></span> PieChart</a>
+        </div>
+        <div class="col-12 col-sm-6  col-xl-3 mt-2">
+            <a class="btn btn-block btn-primary" href="PolarAreaChart"><span class="oi oi-graph" aria-hidden="true"></span> PolarAreaChart</a>
+        </div>
+        <div class="col-12 col-sm-6  col-xl-3 mt-2">
+            <a class="btn btn-block btn-primary" href="BubbleChart"><span class="oi oi-graph" aria-hidden="true"></span> Bubble Chart</a>
+        </div>
+        <div class="col-12 col-sm-6  col-xl-3 mt-2">
+            <a class="btn btn-block btn-primary" href="ScatterChart"><span class="oi oi-graph" aria-hidden="true"></span> Scatter Chart</a>
+        </div>
+        <div class="col-12 col-sm-6  col-xl-3 mt-2">
+            <a class="btn btn-block btn-primary" href="RadarChart"><span class="oi oi-graph" aria-hidden="true"></span> Radar Chart</a>
+        </div>
+    </div>
+
+    <Welcome />
+
+
