--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Welcome.razor
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/Welcome.razor
@@ -1,4 +1,4 @@
-﻿<style>
+﻿@*<style>
     .bg-1 {
         background-color: #1abc9c; /* Green */
         color: #ffffff;
@@ -9,16 +9,16 @@
     <h2>
         Welcome to the ChartJs.Blazor Samples.
     </h2>
-</div>
+</div>*@
 
-<div class="container-fluid bg-1 text-left">
+@*<div class="container-fluid bg-1 text-left">
 
     <p>
         <br />Use the navbar on the left (or the hamburger menu if you're on mobile) to switch between the samples.
         <br />
     </p>
     <h3></h3>
-</div>
+</div>*@
 
 <div class="container-fluid bg-2 text-center">
     <h3>Where are the goodies?</h3>
@@ -26,7 +26,7 @@
 <div class="container-fluid bg-2 text-center">
     <p>
         Nuget Package:
-        <a style="color: #00cc00"
+        <a 
            href="https://www.nuget.org/packages/ChartJs.Blazor"
            target="_blank">
             https://www.nuget.org/packages/ChartJs.Blazor
@@ -35,7 +35,7 @@
 
     <p>
         Source code:
-        <a style="color: #00cc00"
+        <a
            href="https://github.com/mariusmuntean/ChartJs.Blazor"
            target="_blank">
             https://github.com/mariusmuntean/ChartJs.Blazor
