--- a/ChartJs.Blazor.Samples/Client/_Imports.razor
+++ b/ChartJs.Blazor.Samples/Client/_Imports.razor
@@ -7,3 +7,4 @@
 @using Microsoft.JSInterop
 @using ChartJs.Blazor.Samples.Client
 @using ChartJs.Blazor.Samples.Client.Shared
+@using ChartJs.Blazor.Samples.Shared
