--- a/ChartJs.Blazor.Samples/Client/App.razor
+++ b/ChartJs.Blazor.Samples/Client/App.razor
@@ -3,8 +3,6 @@
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
     </Found>
     <NotFound>
-        <LayoutView Layout="@typeof(MainLayout)">
-            <p>Sorry, there's nothing at this address.</p>
-        </LayoutView>
+        <ChartJs.Blazor.Samples.Client.Pages.RedirectToRoot />
     </NotFound>
 </Router>
