sidebar now scrolls showing all links

--- a/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/wwwroot/css/site.css
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.ServerSide/wwwroot/css/site.css
@@ -146,5 +146,7 @@ app {
     .sidebar .collapse {
         /* Never collapse the sidebar for wide screens */
         display: block;
+        height: 100vh;
+        overflow-y: auto;
     }
 }
