Prepare for samples

--- a/ChartJs.Blazor.Samples/Client/Pages/RedirectToRoot.razor
+++ b/ChartJs.Blazor.Samples/Client/Pages/RedirectToRoot.razor
@@ -1,7 +1,7 @@
 ﻿@inject NavigationManager navigationManager
 
 @code {
-    // I'm not so sure about the correct way of doing this
+    // I'm not so sure about the correct way of doing this but this probably isn't it
     protected override void OnInitialized()
     {
         navigationManager.NavigateTo("/");
