--- a/ChartJs.Blazor.Samples/Client/_Imports.razor
+++ b/ChartJs.Blazor.Samples/Client/_Imports.razor
@@ -8,3 +8,14 @@
 @using ChartJs.Blazor.Samples.Client
 @using ChartJs.Blazor.Samples.Client.Shared
 @using ChartJs.Blazor.Samples.Shared
+@using ChartJS.Common
+@using ChartJS.Common.Axes
+@using ChartJS.Common.Axes.Ticks
+@using ChartJS.Common.Enums
+@using ChartJS.Common.Properties
+@using ChartJS.Common.Handlers
+@using ChartJS.Common.Time
+@using ChartJs.Blazor.Charts
+@using ChartJs.Blazor.Util
+@using ChartJs.Blazor.Interop
+@using static ChartJs.Blazor.Samples.Shared.SampleUtils
