--- a/ChartJs.Blazor.Samples/Client/Shared/MainLayout.razor
+++ b/ChartJs.Blazor.Samples/Client/Shared/MainLayout.razor
@@ -2,7 +2,7 @@
 @inject DualModeSerivce dualModeSerivce
 @inject NavigationManager navigationManager
 
-<svg @onclick="(() => dualModeSerivce.SwitchMode(navigationManager))" style="position:absolute;top:0;right:0;" width="100" height="100" version="1.1" viewBox="0 0 312 312" xmlns="http://www.w3.org/2000/svg">
+<svg @onclick="(() => dualModeSerivce.SwitchMode(navigationManager))" style="position:absolute;top:0;right:0;z-index:99999" width="100" height="100" version="1.1" viewBox="0 0 312 312" xmlns="http://www.w3.org/2000/svg">
     <path class="btn-switchMode" d="m0 0c135 131 202 202 312 312v-312z" fill="#f27173" stroke-width="1.25" />
     <text transform="rotate(45)" x="220.63438" y="-109.42586" fill="#000000" font-family="sans-serif" letter-spacing="0px" stroke-width="3.12" text-align="center" text-anchor="middle" word-spacing="0px" style="line-height:0; -webkit-touch-callout: none;-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;pointer-events: none;" xml:space="preserve"><tspan x="220.63438" y="-109.42586" font-size="41.7px" text-align="center" style="line-height:0.95">Switch</tspan><tspan x="220.63438" y="-69.842491" font-size="41.7px" text-align="center" style="line-height:0.95">to</tspan><tspan x="220.63438" y="-20.730005" font-size="54.2px" text-align="center" style="line-height:0.95">@(dualModeSerivce.ServerMode ? "Client" : "Server")</tspan></text>
 </svg>
