--- a/src/ChartJs.Blazor/BarChart/Axes/ExtendedCartesianAxes.tt
+++ b/src/ChartJs.Blazor/BarChart/Axes/ExtendedCartesianAxes.tt
@@ -1,4 +1,4 @@
-<#@ template debug="false" hostspecific="true" language="C#" #>
+﻿<#@ template debug="false" hostspecific="true" language="C#" #>
 <#@ output extension=".cs" #>
 <#@ assembly name="System.Core" #>
 <#@ assembly name="$(TargetPath)" #>
@@ -17,7 +17,7 @@ namespace ChartJs.Blazor.BarChart.Axes
 {
     /// <summary>
     /// Extended version of <see cref="<#= baseName #>"/> for use in a bar chart.
-    /// <para>As per documentation here https://www.chartjs.org/docs/latest/charts/bar.html#scale-configuration </para>
+    /// <para>As per documentation <a href="https://www.chartjs.org/docs/latest/charts/bar.html#scale-configuration">here (Chart.js)</a>.</para>
     /// </summary>
     public class <#= className #> : <#= baseName #>
     {
@@ -27,10 +27,10 @@ namespace ChartJs.Blazor.BarChart.Axes
         public <#= className #>()
         {
             GridLines = new GridLines()
-			{
-				OffsetGridLines = <#= className.Contains("Category").ToString().ToLower() #>
-			};
-			Offset = <#= className.Contains("Category").ToString().ToLower() #>;
+            {
+                OffsetGridLines = <#= className.Contains("Category").ToString().ToLower() #>
+            };
+            Offset = <#= className.Contains("Category").ToString().ToLower() #>;
         }
 
         /// <summary>
@@ -64,9 +64,9 @@ namespace ChartJs.Blazor.BarChart.Axes
 
         /// <summary>
         /// Gets or sets a value indicating whether grid lines will be shifted to be between labels or not.
-        /// If <c>true</c>, the bars for a particular data point fall between the grid lines.
+        /// If <see langword="true"/>, the bars for a particular data point fall between the grid lines.
         /// The grid line will move to the left by one half of the tick interval.
-        /// If <c>false</c>, the grid line will go right down the middle of the bars.
+        /// If <see langword="false"/>, the grid line will go right down the middle of the bars.
         /// <para>Changing this value will directly affect <see cref="GridLines.OffsetGridLines"/> of the property <see cref="CartesianAxis.GridLines"/> in this instance.</para>
         /// </summary>
         public bool OffsetGridLines
@@ -79,7 +79,7 @@ namespace ChartJs.Blazor.BarChart.Axes
         /// Gets or sets a value indicating whether the bar chart is stacked or not.
         /// Bar charts can be configured into stacked bar charts by changing the settings on the X and Y axes to enable stacking.
         /// Stacked bar charts can be used to show how one data series is made up of a number of smaller pieces.
-        /// <para>As per documentation here https://www.chartjs.org/docs/latest/charts/bar.html#stacked-bar-chart </para>
+        /// <para>As per documentation <a href="https://www.chartjs.org/docs/latest/charts/bar.html#stacked-bar-chart">here (Chart.js)</a>.</para>
         /// </summary>
         public bool Stacked { get; set; } = false;
     }
