Make creation of horizontal bar configs easier [BREAKING]
Instead of passing the correct ChartType, you can just specify a boolean value representing if the chart will be horizontal or not.

--- a/ChartJs.Blazor.Samples/Client/Pages/Charts/Bar/Horizontal.razor
+++ b/ChartJs.Blazor.Samples/Client/Pages/Charts/Bar/Horizontal.razor
@@ -19,7 +19,7 @@
 
     protected override void OnInitialized()
     {
-        _config = new BarConfig(ChartType.HorizontalBar)
+        _config = new BarConfig(horizontal: true)
         {
             Options = new BarOptions
             {
