Add gradient sample to show workaround for #158

--- a/ChartJs.Blazor.Samples/Server/Pages/_Host.cshtml
+++ b/ChartJs.Blazor.Samples/Server/Pages/_Host.cshtml
@@ -33,6 +33,9 @@
 
     <!-- This is the glue between the C# code and the ChartJs charts -->
     <script src="_content/ChartJs.Blazor/ChartJsBlazorInterop.js" type="text/javascript" language="javascript"></script>
+
+    <!-- Workarounds -->
+    <script src="~/workaround-gradient.js"></script>
 </body>
 
 </html>
