Add stepped line sample

--- a/ChartJs.Blazor.Samples/Client/wwwroot/css/app.css
+++ b/ChartJs.Blazor.Samples/Client/wwwroot/css/app.css
@@ -8,6 +8,26 @@ body, html {
     margin: 0;
 }
 
+canvas {
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
+
+.chart-container {
+    width: 500px;
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-bottom: 40px;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 a {
     color: #f27173;
     text-decoration: none;
