Remove the generic parameter of the Chart component
Currently there's no benefit to having a generic parameter there. I don't know why we didn't remove it before but better now than never.

--- a/ChartJs.Blazor.Samples/Client/Pages/Charts/Bar/Stacked.razor
+++ b/ChartJs.Blazor.Samples/Client/Pages/Charts/Bar/Stacked.razor
@@ -3,7 +3,7 @@
 @using ChartJs.Blazor.BarChart.Axes
 @layout SampleLayout
 
-<Chart TConfig="BarConfig" Config="_config" @ref="_chart"></Chart>
+<Chart Config="_config" @ref="_chart"></Chart>
 
 <button @onclick="RandomizeData">Randomize Data</button>
 
@@ -11,7 +11,7 @@
     private const int InitalCount = 7;
     private BarConfig _config;
     private Random _rng = new Random();
-    private Chart<BarConfig> _chart;
+    private Chart _chart;
 
     protected override void OnInitialized()
     {
