--- a/ChartJs.Blazor.Samples/Client/Pages/Charts/Line/Stepped.razor
+++ b/ChartJs.Blazor.Samples/Client/Pages/Charts/Line/Stepped.razor
@@ -6,7 +6,7 @@
     @foreach (Variant variant in _variants)
     {
     <div class="chart-container">
-        <Chart TConfig="LineConfig" Config="GetConfig(variant)"></Chart>
+        <Chart Config="GetConfig(variant)"></Chart>
     </div>
     }
 </div>
