--- a/ChartJs.Blazor.Samples/Client/Pages/Charts/Pie.razor
+++ b/ChartJs.Blazor.Samples/Client/Pages/Charts/Pie.razor
@@ -3,7 +3,7 @@
 @using System.Drawing
 @layout SampleLayout
 
-<Chart TConfig="PieConfig" Config="_config" @ref="_chart"></Chart>
+<Chart Config="_config" @ref="_chart"></Chart>
 
 <button @onclick="RandomizeData">Randomize Data</button>
 <button @onclick="AddDataset">Add Dataset</button>
@@ -13,7 +13,7 @@
     private const int InitalCount = 5;
     private PieConfig _config;
     private Random _rng = new Random();
-    private Chart<PieConfig> _chart;
+    private Chart _chart;
 
     protected override void OnInitialized()
     {
