--- a/ChartJs.Blazor.Samples/Client/Pages/Workarounds/Gradient.razor
+++ b/ChartJs.Blazor.Samples/Client/Pages/Workarounds/Gradient.razor
@@ -3,7 +3,7 @@
 @layout SampleLayout
 @inject IJSRuntime jsRuntime
 
-<Chart TConfig="LineConfig" Config="_config" SetupCompletedCallback="@SetupCompletedCallback"></Chart>
+<Chart Config="_config" SetupCompletedCallback="@SetupCompletedCallback"></Chart>
 
 @code {
     private const int InitalCount = 7;
