Safeguard removing data if empty, remove unnecessary Random instances
Fixes #167

Co-Authored-By: Michael Kellner <16214627+mmuffins@users.noreply.github.com>

--- a/ChartJs.Blazor.Samples/Client/Pages/Charts/Bar/Horizontal.razor
+++ b/ChartJs.Blazor.Samples/Client/Pages/Charts/Bar/Horizontal.razor
@@ -122,8 +122,11 @@
 
     private void RemoveData()
     {
-        if (_config.Data.Datasets.Count == 0)
+        if (_config.Data.Datasets.Count == 0 ||
+            _config.Data.Labels.Count == 0)
+        {
             return;
+        }
 
         _config.Data.Labels.RemoveAt(_config.Data.Labels.Count - 1);
 
