--- a/ChartJs.Blazor.Samples/Client/Pages/Charts/Line/Basic.razor
+++ b/ChartJs.Blazor.Samples/Client/Pages/Charts/Line/Basic.razor
@@ -13,7 +13,6 @@
 @code {
     private const int InitalCount = 7;
     private LineConfig _config;
-    private Random _rng = new Random();
     private Chart _chart;
 
     protected override void OnInitialized()
@@ -140,8 +139,11 @@
 
     private void RemoveData()
     {
-        if (_config.Data.Datasets.Count == 0)
+        if (_config.Data.Datasets.Count == 0 ||
+            _config.Data.Labels.Count == 0)
+        {
             return;
+        }
 
         _config.Data.Labels.RemoveAt(_config.Data.Labels.Count - 1);
 
