--- a/ChartJs.Blazor.Samples/Client/Pages/Charts/Line/Interpolation.razor
+++ b/ChartJs.Blazor.Samples/Client/Pages/Charts/Line/Interpolation.razor
@@ -7,17 +7,15 @@
 <button @onclick="RandomizeData">Randomize Data</button>
 
 @code {
-    private const int InitalCount = 7;
-    private int?[] datapoints;
-    Random rand = new Random();
+    private const int InitalCount = 12;
+    private int?[] _datapoints;
+    private Random _rng = new Random();
     private LineConfig _config;
     private Chart _chart;
 
     protected override void OnInitialized()
     {
-        datapoints = new int?[] { 0, 20, 20, 60, 60, 120, null, 180, 120, 125, 105, 110, 170 };
-
-        IEnumerable<string> labels = new string[] { "0", "1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12" };
+        _datapoints = new int?[] { 0, 20, 20, 60, 60, 120, null, 180, 120, 125, 105, 110, 170 };
 
         _config = new LineConfig
         {
@@ -41,19 +39,15 @@
                 },
                 Scales = new Scales
                 {
-
                     XAxes = new List<CartesianAxis>
-                {
+                    {
                         new CategoryAxis
                         {
-                            ScaleLabel = new ScaleLabel
-                            {
-                                LabelString = "Month"
-                            }
+                            ScaleLabel = new ScaleLabel()
                         }
-                    },
+                        },
                     YAxes = new List<CartesianAxis>
-                {
+                    {
                         new LinearCartesianAxis
                         {
                             ScaleLabel = new ScaleLabel
@@ -72,7 +66,7 @@
             }
         };
 
-        IDataset<int?> dataset1 = new LineDataset<int?>(datapoints)
+        IDataset<int?> dataset1 = new LineDataset<int?>(_datapoints)
         {
             Label = "Cubic interpolation (monotone)",
             BackgroundColor = ColorUtil.FromDrawingColor(ChartColors.Red),
@@ -81,26 +75,26 @@
             CubicInterpolationMode = CubicInterpolationMode.Monotone,
             LineTension = 0.4
         };
-        IDataset<int?> dataset2 = new LineDataset<int?>(datapoints)
+
+        IDataset<int?> dataset2 = new LineDataset<int?>(_datapoints)
         {
-            Label = "Cubic interpolation",
+            Label = "Cubic interpolation (default)",
             BackgroundColor = ColorUtil.FromDrawingColor(ChartColors.Blue),
             BorderColor = ColorUtil.FromDrawingColor(ChartColors.Blue),
             Fill = FillingMode.Disabled,
             LineTension = 0.4
         };
 
-        IDataset<int?> dataset3 = new LineDataset<int?>(datapoints)
+        IDataset<int?> dataset3 = new LineDataset<int?>(_datapoints)
         {
-            Label = "Linear interpolation (default)",
+            Label = "Linear interpolation",
             BackgroundColor = ColorUtil.FromDrawingColor(ChartColors.Green),
             BorderColor = ColorUtil.FromDrawingColor(ChartColors.Green),
             Fill = FillingMode.Disabled,
             LineTension = 0
-
         };
 
-        _config.Data.Labels.AddRange(labels);
+        _config.Data.Labels.AddRange(Enumerable.Range(0, InitalCount).Select(i => i.ToString()));
         _config.Data.Datasets.Add(dataset1);
         _config.Data.Datasets.Add(dataset2);
         _config.Data.Datasets.Add(dataset3);
@@ -108,16 +102,15 @@
 
     private void RandomizeData()
     {
-
-        for(int i = 0; i < datapoints.Count(); i++)
+        for(int i = 0; i < _datapoints.Count(); i++)
         {
-            datapoints[i] = rand.NextDouble() < 0.05 ? null : (int?)RandomScalingFactor();
+            _datapoints[i] = _rng.NextDouble() < 0.05 ? null : (int?)RandomScalingFactor();
         }
 
         foreach (IDataset<int?> dataset in _config.Data.Datasets)
         {
             dataset.Clear();
-            dataset.AddRange(datapoints);
+            dataset.AddRange(_datapoints);
         }
 
         _chart.Update();
