Removed CancasId from ConfigBase, added ChartId to Chart

--- a/src/ChartJs.Blazor/Chart.razor
+++ b/src/ChartJs.Blazor/Chart.razor
@@ -1,1 +1,1 @@
-<canvas id="@Config.CanvasId" width="@Width" height="@Height"></canvas>
+<canvas id="@ChartId" width="@Width" height="@Height"></canvas>
